--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A command line based application that allows a user to track and add employee data",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Brandon Mellus",
